--- a/checkpoint2/index.html
+++ b/checkpoint2/index.html
@@ -26,18 +26,18 @@
             </div>
             <div class="items-2 item">
                 <h1>Watch 2</h1>
-                <img src="image.jpg" alt="image">
+                <img src="image1.png" alt="image">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, cumque recusandae inventore sunt pariatur exercitationem alias est vel labore temporibus quos quaerat maiores reiciendis harum eius, veritatis praesentium sit totam.</p>
                 <button>Shop now</button>
             </div>
             <div class="items-3 item"><h1>Watch 3</h1>
-                <img src="image.jpg" alt="image">
+                <img src="image2.jpg" alt="image">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, cumque recusandae inventore sunt pariatur exercitationem alias est vel labore temporibus quos quaerat maiores reiciendis harum eius, veritatis praesentium sit totam.</p>
             
                 <button>Shop now</button>            </div>
             
                 <div class="items-4 item"><h1>Watch 4</h1>
-                <img src="image.jpg" alt="image"> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, cumque recusandae inventore sunt pariatur exercitationem alias est vel labore temporibus quos quaerat maiores reiciendis harum eius, veritatis praesentium sit totam.</p>
+                <img src="image3.jpg" alt="image"> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, cumque recusandae inventore sunt pariatur exercitationem alias est vel labore temporibus quos quaerat maiores reiciendis harum eius, veritatis praesentium sit totam.</p>
                 <button>Shop now</button></div>
         </div>
     </section>
